--- a/src/Client/CMakeLists.txt
+++ b/src/Client/CMakeLists.txt
@@ -1,12 +1,14 @@
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.1)
 
-project(Client)
+project(Client LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt5Core)
+find_package(Qt5 COMPONENTS Core Quick REQUIRED)
 
-add_executable(${PROJECT_NAME} "main.cpp")
-
-target_link_libraries(${PROJECT_NAME} Qt5::Core)
+add_executable(${PROJECT_NAME} "main.cpp" "qml.qrc")
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Core Qt5::Quick)
