Cmake configuration for windows

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required(VERSION 3.1)
 
 project(SecureVoiceCaller)
 
+include(cmake/config.cmake)
+
+include(cmake/conan_setup.cmake)
+
+add_subdirectory(GRPC)
 add_subdirectory(Tools)
 add_subdirectory(Client)
 add_subdirectory(Server)
