[PeerToPeer][UI] Added missed calls
Added missed calls model-view

--- a/src/Client/CMakeLists.txt
+++ b/src/Client/CMakeLists.txt
@@ -19,6 +19,7 @@ set(CPPSOURCES "Sources/main.cpp"
     "Sources/client.cpp"
     "Sources/qmlclientstate.cpp"
     "Sources/qmlclientsonlinemodel.cpp"
+    "Sources/qmlmissedcallsmodel.cpp"
     "Sources/peertopeer.cpp"
     "Sources/audiomodule.cpp"
     "Sources/audiowriter.cpp"
@@ -26,6 +27,7 @@ set(CPPSOURCES "Sources/main.cpp"
 set(CPPHEADERS "Headers/client.h"
     "Headers/qmlclientstate.h"
     "Headers/qmlclientsonlinemodel.h"
+    "Headers/qmlmissedcallsmodel.h"
     "Headers/peertopeer.h"
     "Headers/audiomodule.h"
     "Headers/audiowriter.h"
